[gd_scene load_steps=3 format=3 uid="uid://q41hl7erxcvb"]

[ext_resource type="Script" path="res://main.gd" id="1_m2vhw"]
[ext_resource type="PackedScene" uid="uid://bkmudycc3jxfe" path="res://note_selector.tscn" id="2_2m0wf"]

[node name="Node" type="Node"]
script = ExtResource("1_m2vhw")

[node name="GDRtMidiOut" type="GDRtMidiOut" parent="."]

[node name="Port" type="Label" parent="."]
offset_left = 38.0
offset_top = 116.0
offset_right = 105.0
offset_bottom = 139.0
text = "Port"

[node name="PortDropDown" type="OptionButton" parent="Port"]
layout_mode = 0
offset_left = 78.0
offset_top = -1.0
offset_right = 351.0
offset_bottom = 27.0

[node name="PortRefreshButton" type="Button" parent="Port"]
layout_mode = 0
offset_left = 35.0
offset_top = -47.0
offset_right = 392.0
offset_bottom = -16.0
text = "Refresh Ports"

[node name="PortConnectButton" type="Button" parent="Port"]
layout_mode = 0
offset_left = 32.0
offset_top = 43.0
offset_right = 201.0
offset_bottom = 74.0
text = "Connect
"

[node name="PortDisconnectButton" type="Button" parent="Port"]
layout_mode = 0
offset_left = 213.0
offset_top = 44.0
offset_right = 392.0
offset_bottom = 75.0
text = "Disconnect
"

[node name="StatusColor" type="ColorRect" parent="Port"]
layout_mode = 0
offset_left = -5.0
offset_top = 44.0
offset_right = 22.0
offset_bottom = 72.0

[node name="Label" type="Label" parent="Port"]
layout_mode = 0
offset_left = 47.0
offset_top = 85.0
offset_right = 381.0
offset_bottom = 117.0
horizontal_alignment = 1

[node name="Program" type="Label" parent="."]
offset_left = 39.0
offset_top = 245.0
offset_right = 106.0
offset_bottom = 268.0
text = "Program"

[node name="ProgramSlider" type="HSlider" parent="Program"]
layout_mode = 0
offset_left = 123.0
offset_top = 5.0
offset_right = 288.0
offset_bottom = 21.0
max_value = 127.0

[node name="Label" type="Label" parent="Program"]
layout_mode = 0
offset_left = 329.0
offset_top = 1.0
offset_right = 369.0
offset_bottom = 24.0
text = "##"

[node name="ProgramChangeButton" type="Button" parent="Program"]
layout_mode = 0
offset_left = 32.0
offset_top = 43.0
offset_right = 391.0
offset_bottom = 74.0
text = "Change Program"

[node name="MidiApiLabel" type="Label" parent="."]
offset_left = 38.0
offset_top = 74.0
offset_right = 78.0
offset_bottom = 97.0

[node name="Notes" type="ReferenceRect" parent="."]
offset_left = 14.0
offset_top = 349.0
offset_right = 480.0
offset_bottom = 624.0

[node name="NoteSelector1" parent="Notes" instance=ExtResource("2_2m0wf")]
layout_mode = 1
offset_left = 41.0
offset_top = 20.0
offset_right = 41.0
offset_bottom = 20.0

[node name="NoteSelector2" parent="Notes" instance=ExtResource("2_2m0wf")]
layout_mode = 1
offset_left = 173.0
offset_top = 20.0
offset_right = 173.0
offset_bottom = 20.0

[node name="NoteSelector3" parent="Notes" instance=ExtResource("2_2m0wf")]
layout_mode = 1
offset_left = 309.0
offset_top = 21.0
offset_right = 309.0
offset_bottom = 21.0

[node name="PlayNoteButton" type="Button" parent="Notes"]
offset_left = 53.0
offset_top = 201.0
offset_right = 412.0
offset_bottom = 260.0
text = "Play Note"

[connection signal="pressed" from="Port/PortRefreshButton" to="." method="_on_port_refresh_button_pressed"]
[connection signal="pressed" from="Port/PortConnectButton" to="." method="_on_port_connect_button_pressed"]
[connection signal="pressed" from="Port/PortDisconnectButton" to="." method="_on_port_disconnect_button_pressed"]
[connection signal="pressed" from="Program/ProgramChangeButton" to="." method="_on_program_change_button_pressed"]
[connection signal="button_down" from="Notes/PlayNoteButton" to="." method="_on_play_note_button_button_down"]
[connection signal="button_up" from="Notes/PlayNoteButton" to="." method="_on_play_note_button_button_up"]
